Stylesheet/emote/tag updates 2015-06-21

--- a/source-css/adagiodazzle.css
+++ b/source-css/adagiodazzle.css
@@ -495,7 +495,7 @@ a[href|="/adagiobattle"], a[href|="/radagiobattle"], a[href|="/adbattle"], a[hre
 a[href|="/awkwardadagio"], a[href|="/rawkwardadagio"], a[href|="/awkwardad"], a[href|="/rawkwardad"] { background-position: -70px -140px; }
 a[href|="/adagiofacepalm"], a[href|="/radagiofacepalm"], a[href|="/adfacepalm"], a[href|="/radfacepalm"] { background-position: -140px -140px; }
 
-a[href|="/adagiosmile"], a[href|="/adsmile"], a[href|="/adagiolook"], a[href|="/adlook"], a[href|="/confidentadagio"], a[href|="/confidentad"], a[href|="/adagiorage"], a[href|="/adrage"], a[href|="/adagioponyshrug"], a[href|="/adpshrug"] {
+a[href|="/adagiosmile"], a[href|="/adsmile"], a[href|="/adagiolook"], a[href|="/adlook"], a[href|="/confidentadagio"], a[href|="/confidentad"], a[href|="/adagiorage"], a[href|="/adrage"], a[href|="/adagioponyshrug"], a[href|="/adpshrug"], a[href|="/adagiohmmm"], a[href|="/adhmmm"] {
   display: block;
   clear: none;
   float: left;
@@ -523,6 +523,7 @@ a[href|="/adagiolook"], a[href|="/radagiolook"], a[href|="/adlook"], a[href|="/r
 a[href|="/confidentadagio"], a[href|="/rconfidentadagio"], a[href|="/confidentad"], a[href|="/rconfidentad"] { background-position: -140px -0px; }
 a[href|="/adagiorage"], a[href|="/adrage"], a[href|="/radagiorage"], a[href|="/radrage"] { background-position: -210px -0px; }
 a[href|="/adagioponyshrug"], a[href|="/adpshrug"], a[href|="/radagioponyshrug"], a[href|="/radpshrug"] { background-position: -0px -70px; }
+a[href|="/adagiohmmm"], a[href|="/adhmmm"] { background-position: -70px -70px; }
 
 a[href|="/adagiostanding"], a[href|="/adstanding"], a[href|="/radagiostanding"], a[href|="/radstanding"] {
   display: block;
