--- a/source-css/ariablaze.css
+++ b/source-css/ariablaze.css
@@ -481,6 +481,9 @@ a[href|="/ariaponyshrug"],a[href|="/abpshrug"]
 a[href|="/rariaponyshrug"],a[href|="/rabpshrug"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponyaria-sheet%%)!important; background-position: -100% -300%;}
 
+a[href|="/lostaria"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponyaria-sheet%%)!important; background-position: -200% -200%;}
+
 a[href|="/wmaria"],a[href|="/wmab"]
 {display:block;clear:none;float:left;width:174px;height:200px;background-image:url(%%wmaria%%)!important; background-position: 0 0;}
 
