--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -32,10 +32,8 @@ a[href|="/bongrass"]{display:block;clear:none;float:left;width:150px;height:131p
 a[href|="/bonterest"]{display:block;clear:none;float:left;width:109px;height:150px;background-image:url(%%bonterest%%)}
 a[href|="/bonwhy"]{display:block;clear:none;float:left;width:139px;height:150px;background-image:url(%%bonwhy%%)}
 a[href|="/nightmarebon"]{display:block;clear:none;float:left;width:200px;height:128px;background-image:url(%%nightmarebon%%)}
-a[href|="/paperbon"]{display:block;clear:none;float:left;width:145px;height:150px;background-image:url(%%paperbon%%)}
 a[href|="/xmasbon"]{display:block;clear:none;float:left;width:120px;height:120px;background-image:url(%%xmasbon%%)}
 a[href|="/sweetiehugs"]{display:block;clear:none;float:left;width:174px;height:200px;background-image:url(%%sweetiehugs%%)}
-a[href|="/myosotis"]{display:block;clear:none;float:left;width:180px;height:143px;background-image:url(%%myosotis%%)}
 a[href|="/sweetierarityhug"]{display:block;clear:none;float:left;width:192px;height:200px;background-image:url(%%sweetierarityhug%%)}
 a[href|="/raritysweetiehug"]{display:block;clear:none;float:left;width:220px;height:250px;background-image:url(%%raritysweetiehug%%)}
 a[href|="/alwaysthinkinofyou"]{display:block;clear:none;float:left;width:171px;height:220px;background-image:url(%%alwaysthinkinofyou%%)}
@@ -83,6 +81,15 @@ a[href|="/angrybon"] {display: block; clear: none; float: left; width: 261px; he
 a[href|="/bonblush"] {display: block; clear: none; float: left; width: 86px; height: 83px; background-position: 0px  -1499px; background-image:url(%%stylesheet3%%) }
 a[href|="/sweetling"] {display: block; clear: none; float: left; width: 107px; height: 171px; background-position: 0px  -1586px; background-image:url(%%stylesheet3%%) }
 a[href|="/lbspringdance"] {display: block; clear: none; float: left; width: 194px; height: 123px; background-position: 0px  -1759px; background-image:url(%%stylesheet3%%) }
+a[href|="/paperbon"] {display: block; clear: none; float: left; width: 145px; height: 150px; background-position: 0px  0px; background-image:url(%%stylesheet4%%) }
+a[href|="/myosotis"] {display: block; clear: none; float: left; width: 180px; height: 143px; background-position: 0px  -151px; background-image:url(%%stylesheet4%%) }
+a[href|="/bonpanic"] {display: block; clear: none; float: left; width: 88px; height: 141px; background-position: 0px  -294px; background-image:url(%%stylesheet4%%) }
+a[href|="/lbaviewtoakill"] {display: block; clear: none; float: left; width: 174px; height: 186px; background-position: 0px  -435px; background-image:url(%%stylesheet4%%) }
+a[href|="/justfriends"] {display: block; clear: none; float: left; width: 249px; height: 131px; background-position: 0px  -622px; background-image:url(%%stylesheet4%%) }
+a[href|="/bonpout"] {display: block; clear: none; float: left; width: 117px; height: 146px; background-position: 0px  -755px; background-image:url(%%stylesheet4%%) }
+a[href|="/bongrapple"] {display: block; clear: none; float: left; width: 174px; height: 177px; background-position: 0px  -901px; background-image:url(%%stylesheet4%%) }
+a[href|="/lyrawhaaat"] {display: block; clear: none; float: left; width: 140px; height: 151px; background-position: 0px  -1079px; background-image:url(%%stylesheet4%%) }
+a[href|="/lbcarry"] {display: block; clear: none; float: left; width: 179px; height: 196px; background-position: 0px  -1231px; background-image:url(%%stylesheet4%%) }
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
