--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -473,8 +473,12 @@ a[href|="/tailwraps"], a[href|="/nmanal"], a[href|="/mooncreampie"], a[href|="/m
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /* Misfits o */
-a[href|="/vanal"], a[href|="/creamparty"], a[href|="/vsdrip"], a[href|="/mooncock"]
+a[href|="/vanal"], a[href|="/creamparty"], a[href|="/vsdrip"], a[href|="/kittiebelle"], a[href|="/shybloom"], a[href|="/babsbutt"], a[href|="/sweetiebutt"], a[href|="/shybelle"], a[href|="/abpresenting"]
 {background-image:url(%%misfitso%%);display:block;float:left;}
+
+/* Misfits p */
+a[href|="/scootabutt"], a[href|="/rubydrip"], a[href|="/trixiespread"]
+{background-image:url(%%misfitsp%%);display:block;float:left;}
 
 
 /* Animated Emotes */
@@ -597,5 +601,14 @@ a[href|="/vanal"] {width: 153px;height:200px;background-position: 0px 0px;}
 a[href|="/creamparty"] {width: 163px;height:200px;background-position: -153px 0px;}
 a[href|="/vsdrip"] {width: 155px;height:250px;background-position: 0px -200px;}
 a[href|="/mooncock"] {width: 250px;height:234px;background-position: -155px -200px;}
+a[href|="/kittiebelle"] {width: 178px;height:200px;background-position: 0px -450px;}
+a[href|="/shybloom"] {width: 167px;height:200px;background-position: -178px -434px;}
+a[href|="/babsbutt"] {width: 136px;height:200px;background-position: -345px -434px;}
+a[href|="/sweetiebutt"] {width: 200px;height:188px;background-position: 0px -650px;}
+a[href|="/shybelle"] {width: 146px;height:150px;background-position: -200px -650px;}
+a[href|="/abpresenting"] {width: 200px;height:190px;background-position: -200px -800px;}
+a[href|="/scootabutt"] {width: 200px;height:191px;background-position: 0px -0px;}
+a[href|="/rubydrip"] {width: 184px;height:200px;background-position: -200px -0px;}
+a[href|="/trixiespread"] {width: 227px;height:250px;background-position: 0px -200px;}
 a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
-
+a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
