--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -364,7 +364,7 @@ a[href|="/flutterheart"]  {
     background-position: -1011px -0px 
     }
 /* HOLY SHEET MORE EMOTES */
-a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/buttbutt"], a[href|="/flutterbutt"], a[href|="/imsorry"], a[href|="/ididntmeanit"],  a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"] {
+a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/buttbutt"], a[href|="/flutterbutt"], a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"] {
 
     display: block;
     clear: none;
@@ -383,10 +383,6 @@ a[href|="/fluttertine"], a[href|="/shytine"] {
 a[href|="/rarityshynibble"], a[href|="/earnibble"] {
     width: 220px;
     background-position: -306px -0px 
-    }
-a[href|="/imsorry"], a[href|="/ididntmeanit"] {
-    width: 266px;
-    background-position: -526px -0px 
     }
 a[href|="/buttbutt"], a[href|="/flutterbutt"] {
     width: 236px;
@@ -408,6 +404,18 @@ a[href|="/supershy"], a[href|="/ohhmy"] {
     width: 281px;
     background-position: -1685px -0px 
     }
+
+/* -New imsorry emote goes here-
+
+a[href|="/imsorry"], a[href|="/ididntmeanit"] {
+
+        display: block;
+    clear: none;
+    float: left;
+    height: 200px;
+    width:
+    background-image: url(%%fluttersheet4%%) !important
+    } */
 /* FANCY SHEET I MEAN SHEET #4 */
 
 a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/buttfilly"], a[href|="/buttshy"], a[href|="/pleeease"], a[href|="/flutterplease"], a[href|="/B"] {
