--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,8 +1,8 @@
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Tins of baking powder "}
+div.titlebox .subscribers span.number:after {content:" Background Ploungers "}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Making friendship fluffy and delicious " }
+div.titlebox p.users-online span.number:after { content: " In the spotlight " }
 div.titlebox p.users-online span.word { display: none }
 
 
@@ -1232,7 +1232,7 @@ a.author[href$="Xeladner"] {font-size:0!important; overflow:hidden; display:inli
 a.author[href$="Xeladner"]:before {font-size:10px!important; visibility:visible!important; content: "WAHAHA~ "}
 
 a.author[href$="theBenger"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="theBenger"]:before {font-size:10px!important; visibility:visible!important; content: "theBenger: Java Barista "}
+a.author[href$="theBenger"]:before {font-size:10px!important; visibility:visible!important; content: "theBenger: Bird Vs Camel "}
 
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "ZellyBelly "}
