--- a/source-css/sonatadusk.css
+++ b/source-css/sonatadusk.css
@@ -524,6 +524,9 @@ a[href|="/sonataooh"],a[href|="/sdooh"]
 a[href|="/rsonataooh"],a[href|="/rsdooh"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -300% -300%;}
 
+a[href|="/lostsonata"],a[href|="/lostsd"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%ponysonata-sheet%%)!important; background-position: -0% -400%;}
+
 a[href|="/wmsonata"],a[href|="/wmsd"]
 {display:block;clear:none;float:left;width:174px;height:200px;background-image:url(%%wmsonata%%)!important; background-position: 0 0;}
 
